[gd_scene load_steps=3 format=3 uid="uid://cor1g1t32w0hq"]

[ext_resource type="Script" uid="uid://bxebchpm72v3u" path="res://general_ui/game_over/game_over_ui.gd" id="1_bww71"]

[sub_resource type="LabelSettings" id="LabelSettings_q7qu8"]
font_size = 90

[node name="GameOverUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bww71")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.50980395)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game Over!
You ran out of life."
label_settings = SubResource("LabelSettings_q7qu8")
horizontal_alignment = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 65)
layout_mode = 2

[node name="Retry" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Retry"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Main Menu"

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
